# trr-scripts

./: .env.example  .gitignore  Makefile  README.md  __init__.py  analyze_contract.py  avg_tvls.py  code.py  codes.py  contract_scanner.py  deployment_dates.sh  download_contract.py  download_contracts.py  fetch_vyper_contract_titles.py  function-summary.py  function_summary.py  hash_mapper.py  inheritance.py  pyproject.toml  rebuild_project.py  stats.py  summary.py  tdp.py  tdp_sol.py  tdp_vy.py  test_avg_tvls.py  trr.py  unique_stats.py
scanner/: README.md  compare_contracts.py  config.yaml  contract_cache.json  contract_graph.gexf  discovered_contracts.json  discovered_contracts_20250812_185145.json  interaction_filters.py  new_contracts.json  requirements.txt  scanner.py  trace_providers.py
scanner/output_contracts/: discovered_contracts_20250822_231746.json  discovered_contracts_20250823_002301.json  discovered_contracts_20250823_015357.json  discovered_contracts_20250826_005551.json  discovered_contracts_20250826_164757.json  discovered_contracts_20250904_010612.json  discovered_contracts_20250909_085351.json  discovered_contracts_20250909_104528.json  discovered_contracts_20250911_100003.json  discovered_contracts_meta.csv
scanner/tests/: test_scanner.py
solana-squads/: package.json  verify_squads_timelock.ts
solana-squads-verifier/: README.md  package.json  requirements.txt
solana-squads-verifier/squads_verifier/: __init__.py  __main__.py  cli.py  formatters.py  types.py  verifier.py
solana-squads-verifier/src/: cli.ts  formatters.ts  index.ts  types.ts  (+1 more)
